add booknote about Go 语言圣经: 函数

--- a/读书笔记/Go 语言圣经/函数.md
+++ b/读书笔记/Go 语言圣经/函数.md
@@ -1,30 +1,499 @@
+目录
+=================
+
+   * [函数](#函数)
+      * [函数声明](#函数声明)
+         * [函数标识符](#函数标识符)
+         * [函数调用](#函数调用)
+      * [递归](#递归)
+         * [golang.org/x/...](#golangorgx)
+      * [多返回值](#多返回值)
+      * [错误](#错误)
+         * [错误信息](#错误信息)
+         * [错误处理策略](#错误处理策略)
+            * [策略一：传播错误](#策略一传播错误)
+            * [策略二：重试](#策略二重试)
+            * [策略三：输出错误信息并结束程序](#策略三输出错误信息并结束程序)
+            * [策略四：只输出错误信息](#策略四只输出错误信息)
+            * [策略五：直接忽略掉错误](#策略五直接忽略掉错误)
+         * [文件结尾错误（EOF）](#文件结尾错误eof)
+      * [函数值](#函数值)
+         * [零值](#零值)
+      * [匿名函数](#匿名函数)
+         * [递归调用匿名函数](#递归调用匿名函数)
+         * [警告：捕获迭代变量](#警告捕获迭代变量)
+      * [可变函数](#可变函数)
+      * [Deferred 函数](#deferred-函数)
+         * [对匿名函数使用 defer](#对匿名函数使用-defer)
+         * [在循环体中使用 defer](#在循环体中使用-defer)
+         * [补充阅读](#补充阅读)
+      * [Panic 异常](#panic-异常)
+         * [内置 panic 函数](#内置-panic-函数)
+         * [适用场景](#适用场景)
+         * [runtime 包](#runtime-包)
+      * [Recover 捕获异常](#recover-捕获异常)
+
 # 函数
 
 ## 函数声明
+```golang
+func name(parameter-list) (result-list) {
+    // body
+}
+```
+函数声明包括：
+* 函数名
+* 形式参数列表：描述了函数的参数名以及参数类型。
+  * 这些参数作为**局部变量**，其值由参数调用者提供。
+  * 如果一组形参有相同的类型，我们不必为每个形参都写出参数类型。
+* 返回值列表（可省略）：函数返回值的变量名以及类型。
+  * 如果函数返回一个无名变量或者没有返回值，返回值列表的括号是可以省略的。
+  * 如果一个函数声明不包括返回值列表，那么函数体执行完毕后，不会返回任何值。
+  * 返回值也可以像形式参数一样被命名。在这种情况下，**每个返回值被声明成一个局部变量，并根据该返回值的类型，将其初始化为0**。
+  *  如果一个函数在声明时，包含返回值列表，该函数必须以 return语句结尾，除非函数明显无法运行到结尾处。
+* 函数体
+  * 函数的形参和有名返回值作为函数最外层的局部变量，被存储在相同的词法块中。
 
+> 注：可能会偶尔遇到没有函数体的函数声明，这表示该函数不是以Go实现的。这样的声明定义了函数标识符。
+
+### 函数标识符
+函数的类型被称为函数的标识符。如果两个函数**形式参数列表和返回值列表中的变量类型一一对应**，那么这两个函数被认为有相同的类型和标识符。
+
+> 注：形参和返回值的**变量名不影响**函数标识符，也不影响它们是否可以以省略参数类型的形式表示。
+
+### 函数调用
+每一次函数调用都必须按照声明顺序为所有参数提供实参（参数值）。
+
+在函数调用时，Go语言**没有默认参数值，也没有任何方法可以通过参数名指定形参**，因此形参和返回值的变量名对于函数调用者而言没有意义。
+
+实参通过值的方式传递，因此**函数的形参是实参的拷贝，对形参进行修改不会影响实参**。但是，**如果实参包括引用类型**，如指针，slice(切片)、map、function、channel等类型，**实参可能会由于函数的间接引用被修改**。
 
 ## 递归
+函数可以是递归的，这意味着函数可以直接或间接的调用自身。
 
+Go语言**使用可变栈**，栈的大小按需增加(初始时很小)。这使得我们使用递归时不必考虑溢出和安全问题。
+
+### `golang.org/x/...`
+该目录下存储了一些由Go团队设计、维护，对网络编程、国际化文件处理、移动平台、图像处理、加密解密、开发者工具提供支持的扩展包。未将这些扩展包加入到标准库原因有二：
+1. 部分包仍在开发中；
+2. 对大多数Go语言的开发者而言，扩展包提供的功能很少被使用。
 
 ## 多返回值
+在Go中，一个函数可以返回多个值。调用多返回值函数时，返回给调用者的是一组值，调用者必须**显式**的将这些值分配给变量。
 
+如果某个值不被使用，可以将其分配给blank identifier：
+```golang
+ret, _ := f()
+```
+
+一个函数内部可以将另一个有多返回值的函数作为返回值：
+```golang
+func f() ([]string, error) { /* body */ }
+func g() ([]string, error) {
+    // do something...
+    return f()
+}
+```
+
+当你调用接受多参数的函数时，可以将一个返回多参数的函数作为该函数的参数。虽然这很少出现在实际生产代码中，但这个特性在debug时很方便，我们只需要一条语句就可以输出所有的返回值。
+```golang
+fmt.Println(g())
+// 等价于
+vals, err := g()
+fmt.Println(vals, err)
+```
+
+准确的变量名可以传达函数返回值的含义。尤其在返回值的类型都相同时：
+```golang
+func Split(path string) (dir, file string)
+```
+
+虽然良好的命名很重要，但你也不必为每一个返回值都取一个适当的名字。比如，按照惯例，函数的最后一个bool类型的返回值表示函数是否运行成功，error类型的返回值代表函数的错误信息，对于这些类似的惯例，我们不必思考合适的命名，它们都无需解释。
+
+需要注意的是，命名返回值和无命名返回值可以混用，但是命名返回值必须放在返回值列表最后。
+```golang
+func f() (ret int, error) { /* body */ } // syntax error: mixed named and unnamed function parameters
+func f() (int, err error) { /* body */ } // pass
+```
+
+如果一个函数将所有的返回值都显示的变量名，那么该函数的return语句可以省略操作数。这称之为 **bare return**。
+```golang
+func f() (val int, err error) {
+    // body
+    return // bare return
+}
+```
+
+当一个函数有多处return语句以及许多返回值时，bare return 可以减少代码的重复，但是使得代码难以被理解。因此不宜过度使用bare return。
 
 ## 错误
+对于那些将运行失败看作是预期结果的函数，它们会返回一个额外的返回值，通常是最后一个，来传递错误信息。
+* 如果导致失败的原因只有一个，额外的返回值可以是一个布尔值，通常被命名为ok。
+* 通常，导致失败的原因不止一种，尤其是对I/O操作而言，用户需要了解更多的错误信息。因此，额外的返回值不再是简单的布尔类型，而是error类型。
+  * 内置的error是接口类型，值可能是nil或者non-nil
+    * nil意味着函数运行成功
+    * non-nil表示失败
+      * 可以通过调用error的 `Error` 函数或者输出函数获得字符串类型的错误信息
 
+在Go中，函数运行失败时会返回错误信息，这些错误信息被认为是一种预期的值而非异常（exception），这使得Go有别于那些将函数运行失败看作是异常的语言。虽然Go有各种异常机制，但这些机制仅被使用在处理那些未被预料到的错误，即bug，而不是那些在健壮程序中应该被避免的程序错误。
+
+### 错误信息
+`fmt.Errorf` 函数使用 `fmt.Sprintf` 格式化错误信息并返回。可以使用该函数前缀添加额外的上下文信息到原始错误信息。
+
+由于错误信息经常是以链式组合在一起的，所以错误信息中应避免大写和换行符。最终的错误信息可能很长，我们可以通过类似grep的工具处理错误信息。
+
+编写错误信息时，我们要确保错误信息对问题细节的描述是详尽的。尤其是要注意错误信息表达的一致性，即相同的函数或同包内的同一组函数返回的错误在构成和处理方式上是相似的。
+
+
+### 错误处理策略
+在Go中，错误处理有一套独特的编码风格。检查某个子函数是否失败后，我们**通常将处理失败的逻辑代码放在处理成功的代码之前**。如果某个错误会导致函数返回，那么成功时的逻辑代码不应放在else语句块中，而应直接放在函数体中。Go中大部分函数的代码结构几乎相同，**首先是一系列的初始检查，防止错误发生，之后是函数的实际逻辑**。
+
+#### 策略一：传播错误
+这意味着函数中某个子程序的失败，会变成该函数的失败。
+```golang
+resp, err := http.Get(url)
+if err != nil {
+    return nil, err
+}
+```
+
+#### 策略二：重试
+如果错误的发生是偶然性的，或由不可预知的问题导致的。一个明智的选择是重新尝试失败的操作。在重试时，我们**需要限制重试的时间间隔或重试的次数，防止无限制的重试**。
+
+```golang
+for tries := 0; time.Now.Before(deadline); tries++ {
+    _, err := http.Head(url)
+    if err == nil {
+        return nil // success
+    }
+    log.Printf("server not responding (%s);retrying…", err)
+    time.Sleep(time.Second << unit(tries)>>)
+}
+```
+
+#### 策略三：输出错误信息并结束程序
+如果错误发生后，程序无法继续运行，则可以采取该策略。
+
+需要注意的是，这种策略只应在main中执行。对库函数而言，应仅向上传播错误，除非该错误意味着程序内部包含不一致性，即遇到了bug，才能在库函数中结束程序。
+
+```golang
+func main() {
+    // ....
+    if err := WaitForServer(url); err != nil {
+        fmt.Fprintf(os.Stderr, "Site is down: %v\n", err)
+        os.Exit(1)
+    }
+    // ...
+}
+```
+
+#### 策略四：只输出错误信息
+有时，我们只需要输出错误信息就足够了，不需要中断程序的运行。
+```golang
+if err := Ping(); err != nil {
+    log.Printf("ping failed: %v; networking disabled", err)
+}
+```
+
+注：log包中的所有函数会为没有换行符的字符串增加换行符。
+
+#### 策略五：直接忽略掉错误
+应该在每次函数调用后，都养成考虑错误处理的习惯，当你决定忽略某个错误时，应该清晰的记录下你的意图。
+
+### 文件结尾错误（EOF）
+`io` 包保证任何由文件结束引起的读取失败都返回同一个错误——`io.EOF`，该错误在io包中定义。
+
+调用者只需通过简单的比较，就可以检测出这个错误。
+```golang
+in := bufio.NewReader(os.Stdin)
+for {
+    r, _, err := in.ReadRune()
+    if err == io.EOF {
+        break // finished reading
+    }
+    if err != nil {
+        return fmt.Errorf("read failed: %v", err)
+    }
+    // ...
+}
+```
 
 ## 函数值
+在Go中，**函数被看作第一类值（first-class values）**：像其他值一样，拥有类型，可以被赋值给其他变量，传递给函数，从函数返回。
 
+对函数值（function value）的调用类似函数调用。
+```golang
+func square(n int) int { return n * n}
+func negative(n int) int { return -n }
+func product(m, n int) int { return m * n}
+
+f := square
+fmt.Printf(f(3)) // "9"
+
+// 函数签名一致可以赋值
+f = negative
+fmt.Println(f(3)) // "-3"
+fmt.Printf("%T\n", f) // "func(int) int"
+
+f = product // compile error: can't assign func(int, int) int to func(int) int
+```
+
+函数值使得我们不仅仅可以通过数据来参数化函数，亦可通过行为。
+
+### 零值
+函数类型的零值是 nil。调用值为 nil 的函数值会引起panic错误。
+
+函数值可以与nil比较：
+```golang
+var f func(int) int
+if f != nil {
+    f(3)
+}
+```
+
+但是函数值之间是不可比较的，也不能用函数值作为map的key。
 
 ## 匿名函数
+拥有函数名的函数只能在包级语法块中被声明，通过**函数字面量（function literal）**，可绕过这一限制，在任何表达式中表示一个函数值。
 
+函数字面量的语法和函数声明相似，区别在于func关键字后没有函数名。函数值字面量是一种表达式，它的值被成为**匿名函数（anonymous function）**。
+
+函数字面量允许我们在使用函数时，再定义它。过这种方式定义的函数可以访问完整的词法环境（lexical environment），这意味着**在函数中定义的内部函数可以引用该函数的变量**。
+
+```golang
+// squares 返回一个匿名函数
+// 该匿名函数每次被调用时都会返回下一个数的平方
+func squares() func() int {
+    var x int
+    return fun(){
+        x++
+        return x * x
+    }
+}
+
+f := sqares()
+fmt.Println(f()) // "1"
+fmt.Println(f()) // "4"
+```
+
+在squares中定义的匿名内部函数可以访问和更新squares中的局部变量，这意味着匿名函数和squares中，存在变量引用。这就是函数值属于引用类型和函数值不可比较的原因。Go使用**闭包（closures）技术**实现函数值，Go程序员也把函数值叫做闭包。
+
+### 递归调用匿名函数
+```golang
+func sort(m map[string][]string) []string {
+    // ...
+    var visitAll func(items []string)
+    visitAll = func(items []string) {
+        // ...
+        visitAll(m[items])
+        // ...
+    }
+}
+```
+当匿名函数需要被递归调用时，我们**必须首先声明一个变量**（在上面的例子中，我们首先声明了 visitAll），**再将匿名函数赋值给这个变量**。如果不分成两部，函数字面量无法与visitAll绑定，我们也无法递归调用该匿名函数。
+```golang
+visitAll := func(items []string) {
+    // ...
+    visitAll(m[item]) // compile error: undefined: visitAll
+    // ...
+}
+```
+
+### 警告：捕获迭代变量
+**for循环语句引入了新的词法块，循环变量在这个词法块中被声明。在该循环中生成的所有函数值都共享相同的循环变量**。需要注意，**函数值中记录的是循环变量的内存地址，而不是循环变量某一时刻的值**。
+
+```golang
+var rmdirs []func()
+for _, dir := range tempDirs() {
+    os.MkdirAll(dir, 0755)
+    rmdirs = append(rmdirs, func(){
+        os.RemoveAll(dir) // 注意：错误！
+    })
+}
+```
+在上面的程序中，后续的迭代会不断更新dir的值，当删除操作执行时，for循环已完成，dir中存储的值等于最后一次迭代的值。这意味着，每次对os.RemoveAll的调用删除的都是相同的目录。
+
+通常，为了解决这个问题，我们会引入一个与循环变量同名的局部变量，作为循环变量的副本。
+```golang
+for _, dir := range tempDirs() {
+    dir := dir // 声明内部的 dir，初始化为外部的 dir 值
+}
+```
+
+这个问题不仅存在基于range的循环，在下面的例子中，对循环变量i的使用也存在同样的问题：
+```golang
+for i := 0; i < len(dirs); i++ {
+    os.MkdirAll(dirs[i], 0755) // OK
+    rmdirs = append(rmdirs, func() {
+        os.RemoveAll(dirs[i]) // NOTE: incorrect!
+    })
+}
+```
+
+> 注：如果你使用go语句或者defer语句会经常遇到此类问题。这不是go或defer本身导致的，而是**因为它们都会等待循环结束后，再执行函数值**。
 
 ## 可变函数
+参数数量可变的函数称为为可变参数函数。在声明可变参数函数时，需要在参数列表的最后一个参数类型之前加上省略符号“...”，这表示该函数会接收任意数量的该类型参数。
+```golang
+func f(para1 string, vals ...int) { /* ... */ }
+```
+在函数体中，vals被看作是类型为[] int的切片。
 
+```golang
+func sum(vals ...int) (total int) {
+	for _, val := range vals {
+		total += val
+	}
+	return
+}
+
+// 调用者隐式的创建一个数组，并将原始参数复制到数组中，
+// 再把数组的一个切片作为参数传给被调函数。
+fmt.Println(sum()) // "0"
+fmt.Println(sum(1, 2, 3, 4)) // "10"
+
+// 如果原始参数已经是切片类型，
+// 只需在最后一个参数后加上省略符。
+values := []int{1, 2, 3, 4}
+fmt.Println(sum(values...)) // "10"
+```
+
+可变参数函数和以切片作为参数的函数是不同的。
+```golang
+func f(...int) {}
+func g([]int)  {}
+
+fmt.Printf("%T\n", f) // "func(...int)"
+fmt.Printf("%T\n", g) // "func([]int)"
+```
+
+可变参数函数经常被用于格式化字符串。函数名的后缀f是一种通用的命名规范，代表该可变参数函数可以接收Printf风格的格式化字符串。
 
 ## Deferred 函数
+只需要在调用普通函数或方法前加上关键字defer，就完成了defer所需要的语法。
 
+当defer语句被执行时，跟在defer后面的函数会被延迟执行。直到包含该defer语句的函数执行完毕时，defer后的函数才会被执行，不论包含defer语句的函数是通过return正常结束，还是由于panic导致的异常结束。
 
+几条规则：
+* 被 defer 的函数参数是在执行 defer 语句的时候就已经确定值了
+* 可以在一个函数中执行多条defer语句，它们的**执行顺序与声明顺序相反（FILO）**。
+* 被 defer 的函数可以读取已经设置返回函数的命名返回值。
+
+defer、return 和返回值三者的执行逻辑：
+1. 执行 return
+2. return 将结果写入返回值。如果有命名返回值，则写入命名返回值，否则创建返回变量后再写入
+3. 执行 defer
+4. 函数携带当前返回值退出
+
+defer语句经常被用于处理成对的操作，如打开、关闭、连接、断开连接、加锁、释放锁。通过defer机制，不论函数逻辑多复杂，都能保证在任何执行路径下，资源被释放。释放资源的defer应该直接跟在请求资源的语句后。
+```golang
+resp, err := http.Get(url)
+if err != nil {
+    return err
+}
+defer resp.Body.Close()
+// ...
+```
+
+注意1：**不要忘记defer语句后的圆括号**。
+注意2：如果被 defer 的函数的返回值有意义，则需要考虑是否使用 defer。
+
+### 对匿名函数使用 defer
+**defer语句中的函数会在return语句更新返回值变量后再执行**，又因为在函数中定义的匿名函数可以访问该函数包括返回值变量在内的所有变量，所以，对匿名函数采用defer机制，可以使其观察函数的返回值。
+
+```golang
+func double(x int) (result int) {
+    defer func(){
+        fmt.Printf("double(%d) = %d\n", x, result)
+    }() // 不要忘了圆括号
+    return x + x
+}
+
+double(4) // 输出："double(4) = 8"
+```
+
+**被延迟执行的匿名函数甚至可以修改函数返回给调用者的返回值**：
+```golang
+func triple(x int) (result int) {
+    defer func(){
+        result += x
+    }()
+    return double(x)
+}
+fmt.Println(triple(4)) // "12"
+```
+
+### 在循环体中使用 defer
+在这种场景下需要特别注意，因为只有在函数执行完毕后，这些被延迟的函数才会执行。
+
+一种解决方法是**将循环体中的defer语句移至另外一个函数**。在每次循环时，调用这个函数。
+
+### 补充阅读
+* [Defer, Panic, and Recover](https://blog.golang.org/defer-panic-and-recover)
+  
 ## Panic 异常
+Go的类型系统会在编译时捕获很多错误，但有些错误只能在运行时检查，如数组访问越界、空指针引用等。这些运行时错误会引起painc异常。
 
+一般而言，当panic异常发生时，
+1. 程序中断运行
+2. **立即执行在该 goroutine 中被延迟的函数（defer 机制）**。
+   * 注：延迟函数的调用在释放堆栈信息之前
+3. 随后，程序崩溃并输出日志信息。日志信息包括panic value和函数调用的堆栈跟踪信息。
+   * panic value通常是某种错误信息。
+   * 对于每个goroutine，日志信息中都会有与之相对的，发生panic时的函数调用堆栈跟踪信息。
+
+### 内置 `panic` 函数
+直接调用内置的panic函数也会引发panic异常。panic 函数接受任何值作为参数。当某些不应该发生的场景发生时，我们就应该调用panic。
+
+### 适用场景
+由于panic会引起程序的崩溃，因此panic**一般用于严重错误**，如程序内部的逻辑不一致。而**对于大部分漏洞，我们应该使用Go提供的错误机制，而不是panic，尽量避免程序的崩溃**。在健壮的程序中，任何可以预料到的错误，如不正确的输入、错误的配置或是失败的I/O操作都应该被优雅的处理，最好的处理方式，就是使用Go的错误机制。
+
+当调用者明确的知道正确的输入不会引起函数错误时，要求调用者检查这个错误是不必要和累赘的。应该假设函数的输入一直合法，当调用者输入了不应该出现的输入时，触发panic异常。而函数名中的Must前缀是一种针对此类函数的命名约定，比如 `template.Must`。
+
+### `runtime` 包
+`runtime` 包允许程序员输出堆栈信息，以方便诊断问题。
+```golang
+func printStack() {
+    var buf [4096]byte
+    n := runtime.Stack(buf[:], false)
+    os.Stdout.Write(buf[:n])
+}
+```
 
 ## Recover 捕获异常
+如果在deferred函数中调用了内置函数recover，并且定义该defer语句的函数发生了panic异常，recover会使程序从panic中恢复，并返回panic value。导致panic异常的函数不会继续运行，但能正常返回。在未发生panic时调用recover，recover会返回nil。
+
+```golang
+func F() (err error){
+    defer func(){
+        if p := recover(); p != nil {
+            err = fmt.Errorf("internal error: %v", p)
+        }
+    }()
+    // ...
+}
+```
+
+> 注意：不加区分的恢复所有的panic异常，不是可取的做法，因为在panic之后，无法保证包级变量的状态仍然和我们预期一致。
+
+作为被广泛遵守的规范，你**不应该试图去恢复其他包引起的panic**。公有的API应该将函数的运行失败作为error返回，而不是panic。同样的，你也**不应该恢复一个由他人开发的函数引起的panic**，比如说调用者传入的回调函数，因为你无法确保这样做是安全的。
+
+安全的做法是有选择性的recover。换句话说，只恢复应该被恢复的panic异常，此外，这些异常所占的比例应该尽可能的低。**为了标识某个panic是否应该被恢复，我们可以将panic value设置成特殊类型。在recover时对panic value进行检查**，如果发现panic value是特殊类型，就将这个panic作为errror处理，如果不是，则按照正常的panic进行处理。
+
+```golang
+func F() (err error) {
+    type expanic struct {}
+    defer func(){
+        switch p := recover(); p {
+            case nil: // no panic
+            case expanic: // "expected" panic
+                err = fmt.Errorf("...")
+            default:
+                panic(p) // unexpected panic; carry on panicking
+        }
+    }()
+    // ...
+    panic(expanic{})
+    // ...
+}
+```
