add booknote for Go 语言圣经: 基于共享变量的并发

--- a/读书笔记/Go 语言圣经/9. 基于共享变量的并发.md
+++ b/读书笔记/Go 语言圣经/9. 基于共享变量的并发.md
@@ -1,15 +1,326 @@
+目录
+=================
+
+   * [基于共享变量的并发](#基于共享变量的并发)
+      * [竞争条件](#竞争条件)
+         * [数据竞争](#数据竞争)
+         * [避免数据竞争的方式](#避免数据竞争的方式)
+            * [方式一：不要写变量](#方式一不要写变量)
+            * [方式二：避免从多个 goroutine 访问变量](#方式二避免从多个-goroutine-访问变量)
+            * [方式三：互斥](#方式三互斥)
+      * [sync.Mutex 互斥锁](#syncmutex-互斥锁)
+         * [二元信号量](#二元信号量)
+         * [sync.Mutex 类型](#syncmutex-类型)
+            * [临界区](#临界区)
+         * [一种通用的并发模式（“函数-互斥锁-变量”）](#一种通用的并发模式函数-互斥锁-变量)
+         * [Go 的互斥量不能重入](#go-的互斥量不能重入)
+      * [sync.RWMutex 读写锁](#syncrwmutex-读写锁)
+      * [内存同步](#内存同步)
+      * [sync.Once 初始化](#synconce-初始化)
+      * [竞争条件检测](#竞争条件检测)
+      * [Goroutines 和线程](#goroutines-和线程)
+         * [动态栈](#动态栈)
+            * [线程栈](#线程栈)
+            * [goroutine 栈](#goroutine-栈)
+         * [Goroutine 调度](#goroutine-调度)
+            * [线程调度](#线程调度)
+            * [goroutine 调度（GPM 模型）](#goroutine-调度gpm-模型)
+         * [GOMAXPROCS](#gomaxprocs)
+         * [Goroutine 没有 ID 号](#goroutine-没有-id-号)
+      * [补充阅读](#补充阅读)
+
 # 基于共享变量的并发
+在本章中，我们会细致地了解并发机制。尤其是在多goroutine之间的共享变量，并发问题的分析手段，以及解决这些问题的基本模式。
 
 ## 竞争条件
+如果一个函数在线性程序中可以正确地工作，那么如果在并发的情况下，这个函数依然可以正确地工作的话，那么我们就说这个函数是**并发安全的**，并发安全的函数不需要额外的同步工作。对于某个类型来说，如果其所有可访问的方法和操作都是并发安全的话，那么类型便是并发安全的。
+
+> 只有当文档中明确地说明了其是并发安全的情况下，你才可以并发地去访问它。
+
+相反，导出包级别的函数一般情况下都是并发安全的。由于package级的变量没法被限制在单一的gorouine，所以修改这些变量“必须”使用互斥条件。
+
+**竞争条件指的是程序在多个goroutine交叉执行操作时，没有给出正确的结果。**竞争条件带来的问题往往非常难以复现而且难以分析诊断。
+
+### 数据竞争
+无论任何时候，只要有两个或两个以上的goroutine并发访问同一变量，且**至少其中的一个是写操作**的时候就会发生数据竞争。
+
+如果数据竞争的对象是一个比一个机器字(译注：32位机器上一个字=4个字节)更大的类型时，事情就变得更麻烦了，比如interface，string或者slice类型都是如此。
+
+```golang
+var x []int
+go func() {x = make([]int, 10)}()
+go func() {x = make([]int, 1000000)}()
+x[999999] = 1
+// x 的值未定义
+// 可能是 nil，可能是一个长度为 10 的 slice，也可能是长度为 1000000 的 slice
+// 如果指针是从第一个make调用来，而长度从第二个make来，x就变成了一个自称长度为1,000,000但实际上内部只有10个元素的slice。此时难以预测 x[999999] 的值
+// 上面这种情况的语义雷区被称为未定义行为
+```
+
+一个好的经验法则是**根本就没有什么所谓的良性数据竞争**。所以我们一定要避免数据竞争。
+
+### 避免数据竞争的方式
+
+#### 方式一：不要写变量
+如果在创建 goroutine 之前的初始化阶段就初始化了变量并且不再去修改它们，那么任意数量的 goroutine 并发访问这个变量都是安全的，因为每个 goroutine 都只是去读取而已。
+
+但如果更新操作是必要操作的话，就无法使用这种方法
+
+#### 方式二：避免从多个 goroutine 访问变量
+也就是说，将变量访问限定在一个单独的 goroutine 中。
+
+由于其它的goroutine不能够直接访问变量，它们**只能使用一个channel来发送给指定的goroutine请求来查询更新变量**。这也就是Go的口头禅“不要使用共享数据来通信；使用通信来共享数据”。
+
+一个提供通过 channel 来请求指定变量的goroutine叫做这个变量的监控(monitor)goroutine。例如broadcaster goroutine会监控(monitor)clients map的全部访问。
+
+即使当一个变量无法在其整个生命周期内被绑定到一个独立的goroutine，绑定依然是并发问题的一个解决方案。例如在一条流水线上的goroutine之间共享变量是很普遍的行为，在这两者间会通过channel来传输地址信息。如果流水线的每一个阶段都能够避免在将变量传送到下一阶段后再去访问它，那么对这个变量的所有访问就是线性的。其效果是变量会被绑定到流水线的一个阶段，传送完之后被绑定到下一个，以此类推。这种规则有时被称为**串行绑定**。
+
+```golang
+type Cake struct{ state string }
+
+func baker(cooked chan<- *Cake) {
+	for {
+		cake := new(Cake)
+		cake.state = "cooked"
+		cooked <- cake // baker never touches this cake again
+	}
+}
+
+func icer(iced chan<- *Cake, cooked <-chan *Cake) {
+	for cake := range cooked {
+		cake.state = "iced"
+		iced <- cake // icer never touches this cake again
+	}
+}
+```
+
+> 注：这也算 Go 语言中的一种实用模式了
+
+#### 方式三：互斥
+允许很多goroutine去访问变量，但是在同一个时刻最多只有一个goroutine在访问。
 
 ## sync.Mutex 互斥锁
+### 二元信号量
+可以用一个容量只有1的channel来保证最多只有一个goroutine在同一时刻访问一个共享变量。一个只能为1和0的信号量叫做**二元信号量(binary semaphore)**。
+
+```golang
+var (
+	sema    = make(chan struct{}, 1) // 一个二元信号量，cap 必须为 1，否则无法实现
+	balance int
+)
+
+func Deposit(amount int) {
+	sema <- struct{}{} // acquire token
+	balance = balance + amount
+	<-sema // release token
+}
+
+func Balance() int {
+	sema <- struct{}{} // acquire token
+	b := balance
+	<-sema // release token
+	return b
+}
+```
+
+### `sync.Mutex` 类型
+`sync.Mutex` 类型直接支持二元互斥。它的 `Lock` 方法能够获取到token(这里叫锁)，并且 `Unlock` 方法会释放这个token：
+
+```golang
+var (
+	mu      sync.Mutex // guards balance
+	balance int
+)
+
+func Deposit(amount int) {
+	mu.Lock() // acquire lock
+	balance = balance + amount
+	mu.Unlock() // release lock
+}
+
+func Balance() int {
+	mu.Lock() // acquire lock
+	b := balance
+	mu.Unlock() // acquire lock
+	return b
+}
+```
+
+mutex 的 `Lock` 方法会去获取一个互斥锁。如果其他 goroutine 已经获得这个锁的话，这个操作会**阻塞直到**其他 goroutine 调用了 `Unlock` 使该锁变回可用状态。通过这种方式，mutex 可以保护共享变量。
+> 惯例来说，被mutex所保护的变量是在mutex变量声明之后立刻声明的。如果你的做法和惯例不符，确保在文档里对你的做法进行说明。
+
+锁的持有者在其他goroutine获取该锁之前需要调用Unlock。goroutine在结束后**释放锁是必要的**，无论以哪条路径通过函数都需要释放，即使是在错误路径中，也要记得释放。
+
+封装用限制一个程序中的意外交互的方式，可以使我们获得数据结构的不变性。因为某种原因，封装还帮我们获得了并发的不变性。**当你使用mutex时，确保mutex和其保护的变量没有被导出**(在go里也就是小写，且不要被大写字母开头的函数访问啦)，无论这些变量是包级的变量还是一个struct的字段。
+
+#### 临界区
+在Lock和Unlock之间的代码段中的内容goroutine可以随便读取或者修改，这个代码段叫做临界区。
+
+在更复杂的临界区应用中，我们用 `defer` 来调用Unlock，临界区会隐式地延伸到函数作用域的最后，这样我们就从“总要记得在函数返回之后或者发生错误返回时要记得调用一次Unlock”这种状态中获得了解放。Go会自动帮我们完成这些事情。
+
+```golang
+func f() {
+    mu.Lock()
+    defer mu.Unlock()
+    // ...
+}
+```
+
+此外，一个deferred Unlock即使在临界区发生panic时依然会执行，这对于用recover 来恢复的程序来说是很重要的。defer调用只会比显式地调用Unlock成本高那么一点点，不过却在很大程度上保证了代码的整洁性。大多数情况下对于并发程序来说，代码的整洁性比过度的优化更重要。**如果可能的话尽量使用defer来将临界区扩展到函数的结束。**
+
+### 一种通用的并发模式（“函数-互斥锁-变量”）
+一系列的导出函数封装了一个或多个变量，那么访问这些变量唯一的方式就是通过这些函数来做(或者方法，对于一个对象的变量来说)。
+
+每一个函数在一开始就获取互斥锁并在最后释放锁，从而保证共享变量不会被并发访问。这种函数、互斥锁和变量的编排叫作**监控monitor**(这种老式单词的monitor是受"monitor goroutine"的术语启发而来的。两种用法都是一个代理人保证变量被顺序访问)。
+
+### Go 的互斥量不能重入
+也就是说没法对一个已经锁上的mutex来再次上锁--这会导致程序死锁，没法继续执行下去。
+
+原因：斥量的目的是为了确保共享变量在程序执行时的关键点上能够保证不变性。不变性的其中之一是“没有goroutine访问共享变量”。但实际上对于mutex保护的变量来说，不变性还包括其它方面。当一个goroutine获得了一个互斥锁时，它会断定这种不变性能够被保持。其获取并保持锁期间，可能会去更新共享变量，这样不变性只是短暂地被破坏。然而当其释放锁之后，它必须保证不变性已经恢复原样。尽管一个可以重入的mutex也可以保证没有其它的goroutine在访问共享变量，但这种方式没法保证这些变量额外的不变性。（注：没怎么看懂。标记下，后面要进一步研究～）
 
 ## sync.RWMutex 读写锁
+在这种场景下我们需要一种特殊类型的锁，其允许多个只读操作并行执行，但写操作会完全互斥。这种锁叫作**“多读单写”锁**(multiple readers, single writer lock)，Go语言提供的这样的锁是 `sync.RWMutex`。
+
+```golang
+var (
+	mu      sync.RWMutex // guards balance
+	balance int
+)
+
+func Deposit(amount int) {
+	mu.Lock()         // 获取一个写或互斥锁
+	defer mu.Unlock() // 释放一个写或互斥锁
+	balance = balance + amount
+}
+
+func Balance() int {
+	mu.RLock()         // 获取一个读取或者共享锁
+	defer mu.RUnlock() // 释放一个读取或者共享锁
+	return balance
+}
+```
+
+**`RLock` 只能在临界区共享变量没有任何写入操作时可用。**一般来说，我们不应该假设逻辑上的只读函数/方法也不会去更新某一些变量。比如一个方法功能是访问一个变量，但它也有可能会同时去给一个内部的计数器+1，或者去更新缓存--使即时的调用能够更快。**如果有疑惑的话，请使用互斥锁。**
+
+> 注：RWMutex只有当获得锁的大部分goroutine都是读操作，而锁在竞争条件下，也就是说，goroutine们必须等待才能获取到锁的时候，RWMutex才是最能带来好处的。RWMutex需要更复杂的内部记录，所以会让它比一般的无竞争锁的mutex慢一些。
 
 ## 内存同步
+在现代计算机中可能会有一堆处理器，每一个都会有其本地缓存(local cache)。为了效率，对内存的写入一般会在每一个处理器中缓冲，并在必要时一起flush到主存。这种情况下这些**数据可能会以与当初goroutine写入顺序不同的顺序被提交到主存**。像channel通信或者互斥量操作这样的原语会使处理器将其聚集的写入flush并commit，这样goroutine在某个时间点上的执行结果才能被其它处理器上运行的goroutine得到。
+
+考虑下下面这个例子：
+```golang
+var x, y int
+go func() {
+    x = 1 // A1
+    fmt.Print("y:", y, " ") // A2
+}()
+go func() {
+    y = 1                   // B1
+    fmt.Print("x:", x, " ") // B2
+}()
+```
+
+| 执行顺序 | 打印结果 |
+| ---------- | :-----------:  |
+| A1, A2, B1, B2 | y:0 x:1 |
+| B1, B2, A1, A2 | x:0 y:1 |
+| A1, B1, B2, A2 或 B1, A1, B2, A2 | x:1 y:1 |
+| A1,B1,A2,B2 或 B1,A1,A2,B2 | y:1 x:1 |
+| A2 和 B2 观察到到是一个旧版的值 | x:0 y:0 |
+| A2 和 B2 观察到到是一个旧版的值 | y:0 x:0 |
+
+在一个独立的goroutine中，每一个语句的执行顺序是可以被保证的；也就是说goroutine是顺序连贯的。但是在不使用channel且不使用mutex这样的显式同步操作时，我们就没法保证事件在不同的goroutine中看到的执行顺序是一致的了。
+
+从上面到例子来看，因为赋值和打印指向不同的变量，编译器可能会断定两条语句的顺序不会影响执行结果，并且会交换两个语句的执行顺序。如果两个goroutine在不同的CPU上执行，每一个核心有自己的缓存，这样一个goroutine的写入对于其它goroutine的Print，在主存同步之前就是不可见的了。
+
+所有并发的问题都可以用一致的、简单的既定的模式来规避：**所以可能的话，将变量限定在goroutine内部；如果是多个goroutine都需要访问的变量，使用互斥条件来访问。**
 
 ## sync.Once 初始化
+如果初始化成本比较大的话，那么将初始化延迟到需要的时候再去做就是一个比较好的选择。如果在程序启动的时候就去做这类的初始化的话会增加程序的启动时间并且因为执行的时候可能也并不需要这些变量所以实际上有一些浪费。
+
+sync包为我们提供了一个专门的方案来解决这种一次性初始化的问题：`sync.Once`。概念上来讲，一次性的初始化需要一个互斥量mutex和一个boolean变量来记录初始化是不是已经完成了；互斥量用来保护boolean变量和客户端数据结构。`Do` 这个唯一的方法需要接收初始化函数作为其参数。
+
+```golang
+var loadIconsOnce sync.Once
+var icons map[string]image.Image
+
+func loadIcons() {
+	// 初始化 icons
+}
+
+// 并发安全
+func Icon(name string) image.Image {
+	loadIconsOnce.Do(loadIcons)
+	return icons[name]
+}
+```
+每一次调用 `Do(fn)`：
+1. 锁定 mutex
+2. 检查 boolean 变量
+   1. 第一次调用时，boolean 变量的值为 false。此时，`Do` 会调用 `fn` 并会将 boolean 变量设置为 true
+   2. 随后的调用什么都不会做
+3. mutex 同步会保证 `fn` 对内存产生的效果能够对所有 goroutine 可见。
+
+用这种方式来使用sync.Once的话，我们能够避免在变量被构建完成之前和其它goroutine共享该变量。
 
 ## 竞争条件检测
+Go的runtime和工具链为我们装备了一个复杂但好用的动态分析工具：**竞争检查器(the race detector)**。
+
+```
+go build -race
+go run -race
+go test -race
+```
+
+上面的 `-race` 这个 flag 会使编译器创建一个应用的“修改”版或者一个附带了能够记录所有运行期对共享变量访问工具的test，并且会记录下每一个读或者写共享变量的goroutine的身份信息。另外，修改版的程序会记录下所有的同步事件，比如go语句，channel操作，以及对 `(*sync.Mutex).Lock`，`(*sync.WaitGroup).Wait` 等等的调用。
+
+竞争检查器会报告所有的已经发生的数据竞争。然而，它只能检测到运行时的竞争条件；并不能证明之后不会发生数据竞争。所以为了使结果尽量正确，请保证你的测试并发地覆盖到了你到包。
+
+由于需要额外的记录，因此构建时加了竞争检测的程序跑起来会慢一些，且需要更大的内存，即使是这样，这些代价对于很多生产环境的工作来说还是可以接受的。对于一些偶发的竞争条件来说，让竞争检查器来干活可以节省无数日夜的debugging。
 
 ## Goroutines 和线程
+goroutine 并不是操作系统线程！！
+
+### 动态栈
+#### 线程栈
+每一个OS线程都有一个固定大小的内存块(一般会是**2MB**)来做栈，这个栈会用来存储当前正在被调用或挂起(指在调用其它函数时)的函数的内部变量。
+
+#### goroutine 栈
+一个goroutine会以一个很小的栈开始其生命周期，一般只需要**2KB**。一个goroutine的栈，和操作系统线程一样，会保存其活跃或挂起的函数调用的本地变量，但是和OS线程不太一样的是一个goroutine的栈大小并不是固定的：
+* 栈的大小会根据需要动态地伸缩。
+* goroutine的栈的最大值有1GB，比传统的固定大小的线程栈要大得多
+
+### Goroutine 调度
+#### 线程调度
+OS线程会被操作系统内核调度。每几毫秒，一个硬件计时器会中断处理器，这会调用一个叫作scheduler的内核函数。这个函数会
+1. 挂起当前执行的线程并保存内存中它的寄存器内容，
+2. 检查线程列表并决定下一次哪个线程可以被运行，并从内存中恢复该线程的寄存器信息，
+3. 然后恢复执行该线程的现场并开始执行线程。
+   
+上面这个过程会进行一次完整的上下文切换。这个过程可能会很慢，因为对于局部性很差的线程需要几次内存访问，并且会增加运行的 cpu 周期。
+
+#### goroutine 调度（GPM 模型）
+Go的运行时包含了其自己的调度器，这个调度器使用了一些技术手段，比如**m:n调度**，因为其会在n个操作系统线程上多工(调度)m个goroutine。
+* Go调度器的工作和内核的调度是相似的，但是这个调度器只关注单独的Go程序中的goroutine
+* 和操作系统的线程调度不同的是，Go调度器并不是用一个硬件定时器而是被Go语言"建筑"本身进行调度的。
+  * 例如当一个goroutine调用了 `time.Sleep` 或者被channel调用或者mutex操作阻塞时，调度器会使其进入休眠并开始执行另一个goroutine直到时机到了再去唤醒第一个goroutine。
+  * 因为这种调度方式不需要进入内核的上下文，所以**重新调度一个goroutine比调度一个线程代价要低得多**。
+
+### GOMAXPROCS
+Go的调度器使用了一个叫做 `GOMAXPROCS` 的变量来决定会有多少个操作系统的线程同时执行Go的代码。**其默认的值是运行机器上的CPU的核心数。**
+
+在休眠中的或者在通信中被阻塞的goroutine是不需要一个对应的线程来做调度的。在I/O中或系统调用中或调用非Go语言函数时，是需要一个对应的操作系统线程的，但是GOMAXPROCS并不需要将这几种情况计算在内。
+
+可以用GOMAXPROCS的环境变量来显式地控制这个参数，或者也可以在运行时用`runtime.GOMAXPROCS` 函数来修改它。
+```
+$ GOMAXPROCS=1 go run hello.go
+```
+
+### Goroutine 没有 ID 号
+goroutine没有可以被程序员获取到的身份(id)的概念。这一点是设计上故意而为之。
+> 但是 goroutine 的实现中却是有一个 `id` 值的，这个值未导出。
+
+Go鼓励更为简单的模式，这种模式下参数对函数的影响都是显式的。这样不仅使程序变得更易读，而且会让我们自由地向一些给定的函数分配子任务时不用担心其身份信息影响行为。
+
+## 补充阅读
+* [A Closer Look at Go’s sync Package](https://medium.com/@teivah/a-closer-look-at-go-sync-package-9f4e4a28c35a)
