add booknote for Go 语言圣经: 包和工具

--- a/读书笔记/Go 语言圣经/10. 包和工具.md
+++ b/读书笔记/Go 语言圣经/10. 包和工具.md
@@ -1,15 +1,318 @@
+目录
+=================
+
+   * [包和工具](#包和工具)
+      * [包简介](#包简介)
+      * [导入路径](#导入路径)
+      * [包声明](#包声明)
+      * [导入声明](#导入声明)
+         * [导入包的重命名](#导入包的重命名)
+            * [使用场景](#使用场景)
+      * [包的匿名导入](#包的匿名导入)
+         * [使用场景示例](#使用场景示例)
+      * [包和命名](#包和命名)
+      * [Go 语言工具箱](#go-语言工具箱)
+         * [工作区结构](#工作区结构)
+         * [下载包 go get](#下载包-go-get)
+         * [构建包 go build](#构建包-go-build)
+            * [go run](#go-run)
+            * [go install](#go-install)
+         * [包文档](#包文档)
+            * [go doc 命令](#go-doc-命令)
+            * [godoc](#godoc)
+         * [内部包](#内部包)
+         * [查询包 go list](#查询包-go-list)
+
+
 # 包和工具
 
 ## 包简介
+每个包一般都定义了**一个不同的名字空间**用于它内部的每个标识符的访问。每个名字空间关联到一个特定的包，让我们给类型、函数等选择简短明了的名字，这样可以在使用它们的时候减少和其它部分名字的冲突。
+
+**每个包还通过控制包内名字的可见性和是否导出来实现封装特性。**通过限制包成员的可见性并隐藏包API的具体实现，将允许包的维护者在不影响外部包用户的前提下调整包的内部实现。通过限制包内变量的可见性，还可以强制用户通过某些特定函数来访问和更新内部变量，这样可以保证内部变量的一致性和并发时的互斥约束。
+
+当我们修改了一个源文件，我们必须重新编译该源文件对应的包和所有依赖该包的其他包。Go语言的闪电般的编译速度主要得益于三个语言特性：
+1. 所有导入的包必须在每个文件的开头显式声明，这样的话编译器就没有必要读取和分析整个源文件来判断包的依赖关系。
+2. 禁止包的环状依赖。因为没有循环依赖，包的依赖关系形成一个有向无环图，每个包可以被独立编译，而且很可能是被并发编译。
+3. 编译后包的目标文件不仅仅记录包本身的导出信息，目标文件同时还记录了包的依赖关系。因此，在编译一个包的时候，编译器只需要读取每个直接导入包的目标文件，而不需要遍历所有依赖的的文件。
 
 ## 导入路径
+每个包是由一个全局唯一的字符串所标识的导入路径定位。出现在import语句中的导入路径也是字符串。
+
+```golang
+import (
+    "fmt"
+    "encoding/json"
+    "golang.org/x/net/html"
+)
+```
+
+如果你计划分享或发布包，那么导入路径最好是全球唯一的。为了避免冲突，所有非标准库包的导入路径建议以所在组织的互联网域名为前缀；而且这样也有利于包的检索。例如上面导入的最后一个包。
 
 ## 包声明
+在每个Go语言源文件的开头都必须有包声明语句。包声明语句的**主要目的是确定当前包被其它包导入时默认的标识符（也称为包名）**。
+
+通常来说，默认的包名就是包导入路径名的最后一段，因此**即使两个包的导入路径不同，它们依然可能有一个相同的包名**。例如，`math/rand` 包和 `crypto/rand` 包的包名都是 `rand`。
+
+这种默认行为有三种例外：
+1. 包对应一个可执行程序，也就是** `main` 包**，这时候 `main` 包本身的导入路径是无关紧要的。
+   * 名字为main的包是给 `go build` 构建命令一个信息，这个包编译完之后必须调用连接器生成一个可执行程序。
+2. 包所在的目录中可能有一些文件名是**以 `_test.go` 为后缀的Go源文件**（测试文件），并且这些源文件声明的包名也是以 `_test` 为后缀名的。
+   * 这种目录可以包含两种包：一种是普通包，另一种则是测试的外部扩展包。所有以 `_test` 为后缀包名的测试外部扩展包都由 `go test`命令独立编译，普通包和测试的外部扩展包是相互独立的。
+3. 一些依赖版本号的管理工具会在导入路径后**追加版本号信息**，例如 "gopkg.in/yaml.v2"。
+   * 这种情况下包的名字并不包含版本号后缀，而是yaml。
 
 ## 导入声明
+可以在一个Go语言源文件包声明语句之后，其它非导入声明语句之前，包含零到多个导入包声明语句。
+
+```golang
+// 每个导入声明可以单独指定一个导入路径
+import "fmt"
+import "os"
+
+// 也可以通过圆括号同时导入多个导入路径
+// 这种形式更为常见
+import (
+    "fmt"
+    "os"
+    // 可以通过添加空行来分组
+
+    "golang.org/x/net/html" // 通常将来自不同组织的包独自分组
+    "golang.org/x/net/ipv4" // 顺序不重要，但是在每个分组中一般会根据字符串顺序排列
+)
+```
+
+> `gofmt` 和 `goimports` 工具都可以将不同分组导入的包独立排序。
+
+如果遇到包循环导入的情况，Go语言的构建工具将报告错误。
+
+### 导入包的重命名
+如果想同时导入多个具有相同名字的包，那么导入声明必须至少为一个同名包指定一个新的包名以避免冲突。这叫做导入包的重命名：
+```golang
+import (
+    "crypto/rand"
+    mrand "math/rand" // alternative name mrand avoids conflict
+)
+```
+
+**导入包的重命名只影响当前的源文件**。其它的源文件如果导入了相同的包，可以用导入包原本默认的名字或重命名为另一个完全不同的名字。
+
+#### 使用场景
+1. 解决名字冲突，
+2. 在导入的包名很笨重的时候，选择使用简短名称重命名导入包会更方便（此时包名最好统一）。
+3. 避免和本地普通变量名产生冲突时
 
 ## 包的匿名导入
+有时候我们只是想利用导入包而产生的副作用（它会计算包级变量的初始化表达式和执行导入包的init初始化函数）。这时候需要抑制“unused import”编译错误，我们可以用下划线 `_` （空白标识符，并不能被访问）来重命名导入的包，这就是包的匿名导入。
+```golang
+import _ "image/png"
+```
+
+它通常是用来实现一个编译时机制，然后通过在main主程序入口选择性地导入附加的包。
+
+### 使用场景示例
+可以通过匿名导入 `"image/png"` 使得 `image.Decode` 函数支持 png 格式；也可以通过匿名导入 `"github.com/go-sql-driver/mysql"` 使 `database/sql` 支持 MySql。
 
 ## 包和命名
+包命名约定：
+* 当创建一个包，一般要用短小的包名，但也不能太短导致难以理解。例如标准库的 bufio, bytes, fmt 等包
+* 尽量避免包名使用可能被经常用于局部变量的名字，这样可能导致用户重命名导入包
+* 包名一般采用单数的形式。很多包采用了复数的形式是为了避免和预定义类型或者保留字冲突，例如 strings
+* 避免包名有其它的含义。
 
-## 工具
+包成员命名约定：
+* 当设计一个包的时候，需要考虑包名和成员名两个部分如何很好地配合。成员名不要重复包名的语义，例如 `bytes.Equal   flag.Int    http.Get`
+
+## Go 语言工具箱
+```
+$ go
+...
+    build            compile packages and dependencies
+    clean            remove object files
+    doc              show documentation for package or symbol
+    env              print Go environment information
+    fmt              run gofmt on package sources
+    get              download and install packages and dependencies
+    install          compile and install packages and dependencies
+    list             list packages
+    run              compile and run Go program
+    test             test packages
+    version          print Go version
+    vet              run go tool vet on packages
+
+Use "go help [command]" for more information about a command.
+...
+```
+
+### 工作区结构
+对于大多数的Go语言用户，只需要配置一个名叫 `GOPATH` 的环境变量，用来指定当前工作目录即可。当需要切换到不同工作区的时候，只要更新 `GOPATH` 就可以了。
+
+```sh
+GOPATH/
+    src/ <-- 用于储存源代码
+        gopl.io/
+            .git/
+            ch1/
+                helloworld/ <-- 这个包是 gopl.io/ch1/helloworld
+                    main.go
+        golang.org/x/net/
+            .git/
+            html/
+                parse.go
+                node.go
+                ...
+    bin/ <-- 保存编译后的可执行文件
+        helloworld
+    pkg/ <-- 保存编译后的包的目录文件
+        darwin_amd64/
+        ...
+```
+> `GOPATH` 环境变量必须要设置
+
+
+环境变量 `GOROOT` 用来指定Go的安装目录，还有它自带的标准库包的位置。其目录结构和 `GOPATH` 类似，因此存放fmt包的源代码对应目录应该为 `$GOROOT/src/fmt`。默认情况下，Go 语言安装工具会将 `GOROOT` 设置为安装的目录路径。
+
+`go env` 命令用于查看Go语言工具涉及的所有环境变量的值，包括未设置环境变量的默认值。
+```sh
+$ go env
+GOARCH="amd64" <-- 指定处理器类型
+GOBIN=""
+GOCACHE="/Users/ele/Library/Caches/go-build"
+GOEXE=""
+GOFLAGS=""
+GOHOSTARCH="amd64"
+GOHOSTOS="darwin"
+GOOS="darwin" <-- 指定目标操作系统
+GOPATH="/Users/ele/lab/go"
+GOPROXY=""
+GORACE=""
+GOROOT="/usr/local/go"
+GOTMPDIR=""
+```
+
+### 下载包 `go get`
+使用命令 `go get` 可以下载一个单一的包或者用 `...` 下载整个子目录里面的每个包。Go语言工具箱的go命令同时计算并下载所依赖的每个包。一旦go get命令下载了包，然后就是安装包或包对应的可执行的程序。
+```sh
+$ go get github.com/golang/lint/golint
+```
+
+> 注：`go get` 命令支持当前流行的托管网站GitHub、Bitbucket和Launchpad，可以直接向它们的版本控制系统请求代码。对于其它的网站，你可能需要指定版本控制系统的具体路径和协议。
+
+`go get` 命令获取的代码是真实的本地存储仓库，而不仅仅只是复制源文件，因此你依然可以使用版本管理工具比较本地代码的变更或者切换到其它的版本。
+
+> 注意：导入路径含有的网站域名和本地Git仓库对应远程服务地址可能并不相同。
+
+如果指定 `-u` 命令行标志参数，`go get` 命令将确保所有的包和依赖的包的版本都是最新的，然后重新编译和安装它们。如果不包含该标志参数的话，而且如果包已经在本地存在，那么代码将不会被自动更新。
+
+### 构建包 `go build`
+`go build` 命令编译命令行参数指定的每个包。
+* 如果包是一个库，则忽略输出结果；
+  * 这可以用于检测包是可以正确编译的。
+* 如果包的名字是main，`go build` 将调用链接器在当前目录创建一个可执行程序；以导入路径的最后一段作为可执行程序的名字。
+
+每个包可以由它们的导入路径指定，或者用一个相对目录的路径名指定，相对路径必须以 `.` 或 `..` 开头。如果没有指定参数，那么默认指定为当前目录对应的包。
+```sh
+$ cd $GOPATH/src/gopl.io/ch1/helloworld
+$ go build
+# 或者
+$ cd anywhere
+$ go build gopl.io/ch1/helloworld
+# 或者
+$ cd $GOPATH
+$ go build ./src/gopl.io/ch1/helloworld
+```
+
+也可以指定包的源文件列表，这一般只用于构建一些小程序或做一些临时性的实验。如果是main包，将会以第一个Go源文件的基础文件名作为最终的可执行程序的名字。
+```sh
+$ go build hello.go
+```
+
+#### `go run`
+该命令实际上是结合了构建和运行的两个步骤。
+
+#### `go install`
+`go install` 命令和 `go build` 命令很相似，但是它会保存每个包的编译成果，而不是将它们都丢弃。被编译的包会被保存到 $GOPATH/pkg 目录下GOOS和GOARCH对应的目录，目录路径和 src目录路径对应，可执行程序被保存到$GOPATH/bin目录。
+
+`go install` 命令和 `go build` 命令都不会重新编译没有发生变化的包，这可以使后续构建更快捷。
+
+为了方便编译依赖的包，`go build -i` 命令将安装每个目标所依赖的包。
+
+### 包文档
+Go语言中的文档注释一般是完整的句子：
+* 第一行通常是摘要说明，以被注释者的名字开头。
+* 注释中函数的参数或其它的标识符并不需要额外的引号或其它标记注明。
+* 如果注释后仅跟着包声明语句，那注释对应整个包的文档。
+  * 包文档对应的注释只能有一个（译注：其实可以有多个，它们会组合成一个包文档注释）
+  * 如果包的注释内容比较长，一般会放到一个独立的源文件中。这个专门用于保存包文档的源文件通常叫doc.go
+
+对于一组声明语句，可以用一个精炼的句子描述，如果是显而易见的功能则并不需要注释。
+
+#### `go doc` 命令
+该命令打印其后所指定的实体的声明与文档注释
+```sh
+# 该实体可以是一个包
+$ go doc time
+....
+# 可以是某个具体的包成员
+$ go doc time.Since
+...
+# 或者是一个方法
+$ go doc time.Duration.Seconds
+...
+# 需要输入完整的包导入路径或正确的大小写
+$ go doc json.decode
+...
+```
+
+#### `godoc`
+提供可以相互交叉引用的HTML页面，但是包含和 go doc 命令相同以及更多的信息。
+
+godoc的在线服务 [https://godoc.org](https://godoc.org) ，包含了成千上万的开源包的检索工具。
+
+可以在自己的工作区目录运行godoc服务。
+```sh
+$ godoc -http :8000
+```
+
+### 内部包
+没有导出的标识符只在同一个包内部可以访问，而导出的标识符则是面向全宇宙都是可见的。有时候，一个中间的状态可能也是有用的，也就是说标识符对于一小部分信任的包是可见的，但并不是对所有调用者都可见。
+
+为了满足这些需求，Go语言的构建工具对包含internal名字的路径段的包导入路径做了特殊处理。这种包叫 `internal包`，**一个internal包只能被和internal目录有同一个父目录的包所导入**。
+
+```
+net/http
+net/http/internal/chunked
+net/http/httputil
+net/url
+```
+`net/http/internal/chunked` 内部包只能被 `net/http/httputil` 或 `net/http` 包导入，但是不能被 `net/url` 包导入。不过 `net/url` 包却可以导入 `net/http/httputil` 包。
+
+### 查询包 `go list`
+`go list` 命令可以查询可用包的信息。
+```sh
+# 测试包是否在工作区并打印它的导入路径
+$ go list github.com/go-sql-driver/mysql
+...
+
+# "..."表示匹配任意的包的导入路径
+# 列出工作区中的所有包
+$ go list ...
+...
+# 列出特定子目录下的所有包
+$ go list gopl.io/ch1/...
+...
+# 列出和某个主题相关的所有包
+$ go list ...xml...
+...
+
+# 获取每个包完整的元信息
+# -json 命令行参数表示用JSON格式打印每个包的元信息
+$ go list -json hash
+{
+    ...
+}
+
+# 命令行参数-f则允许用户使用text/template包的模板语言定义输出文本的格式
+$ go list -f '{{join .Deps " "}}' strconv
+errors internal/cpu math math/bits unicode/utf8 unsafe
+```
