add booknote for Go 语言圣经: 测试

--- a/读书笔记/Go 语言圣经/11. 测试.md
+++ b/读书笔记/Go 语言圣经/11. 测试.md
@@ -1,11 +1,247 @@
+目录
+=================
+
+   * [测试](#测试)
+      * [go test 命令](#go-test-命令)
+      * [测试函数（func TestXxxx(t *testing.T)）](#测试函数func-testxxxxt-testingt)
+         * [随机测试](#随机测试)
+         * [测试一个命令](#测试一个命令)
+         * [白盒测试](#白盒测试)
+         * [外部测试包](#外部测试包)
+         * [编写有效的测试](#编写有效的测试)
+         * [避免脆弱的测试](#避免脆弱的测试)
+      * [测试覆盖率](#测试覆盖率)
+      * [基准测试（func BenchmarkXxxx(b *testing.B)）](#基准测试func-benchmarkxxxxb-testingb)
+         * [比较型基准测试](#比较型基准测试)
+      * [剖析（profile）](#剖析profile)
+         * [使用 pprof 分析采样数据](#使用-pprof-分析采样数据)
+      * [示例函数（func ExampleXxxxx()）](#示例函数func-examplexxxxx)
+
+
 # 测试
+这里的测试一般是指自动化测试，也就是写一些小的程序用来检测被测试代码（产品代码）的行为和预期的一样，这些通常都是精心设计的执行某些特定的功能或者是通过随机性的输入待验证边界的处理。
 
-## go test
+## `go test` 命令
+在包目录内，所有以 `_test.go` 为后缀名的源文件在执行go build时不会被构建成包的一部分，它们是go test测试的一部分。
 
-## 测试函数
+`*_test.go` 文件中有三种类型的函数：
+* 测试函数
+  * 以 `Test` 为函数名前缀的函数，用于测试程序的一些逻辑行为是否正确
+  * go test 命令会调用这些测试函数并报告测试结果是PASS或FAIL
+* 基准测试函数（benchmark）
+  * 以 `Benchmark` 为函数名前缀的函数，用于衡量一些函数的性能
+  * go test 命令会多次运行基准函数以计算一个平均的执行时间
+* 示例函数
+  * 以 `Example` 为函数名前缀的函数，提供一个由编译器保证正确性的示例文档
+
+`go test` 命令会：
+1. 遍历所有的*_test.go文件中符合上述命名规则的函数，
+2. 生成一个临时的main包用于调用相应的测试函数
+3. 构建并运行
+4. 报告测试结果
+5. 清理测试中生成的临时文件
+
+## 测试函数（`func TestXxxx(t *testing.T)`）
+```golang
+import "testing"
+
+// 测试函数的名字必须以Test开头，可选的后缀名必须以大写字母开头
+// t 参数用于报告测试失败和附加的日志信息
+func TestName(t *testing.T) {
+    var tests = []struct {
+        input string
+        want bool
+    }{
+        {},
+        ...
+    } 
+    // 这种表格驱动的测试在Go语言中很常见。
+    // 我们可以很容易地向表格添加新的测试数据，并且后面的测试逻辑也没有冗余，这样我们可以有更多的精力去完善错误信息。
+
+    for _, test := range tests {
+        if got := Name(test.input); got != test.want {
+            // t.Errorf 调用不会引起panic异常或停止测试的执行。
+            t.Errorf("Name(%q) = %v, want %v", test.input, got, test.want)
+            // 使用t.Fatal或t.Fatalf会停止当前测试函数，
+            // 它们必须在和测试函数同一个goroutine内调用
+        }
+    }
+}
+```
+
+运行 `go test` 命令
+```sh
+# 如果没有参数指定包那么将默认采用当前目录对应的包
+$ go test
+...
+# 参数-v可用于打印每个测试函数的名字和运行时间
+$ go test -v
+...
+# 参数-run对应一个正则表达式，
+# 只有测试函数名被它正确匹配的测试函数才会被go test测试命令运行
+$ go test -run="Name|Hello"
+```
+
+### 随机测试
+与表格驱动的测试相对的是随机测试，也就是通过构造更广泛的随机输入来测试探索函数的行为。
+
+对于随机输入的期望结果的获得有两种处理策略：
+1. 编写另一个对照函数，使用简单和清晰的算法，虽然效率较低但是行为和要测试的函数是一致的，然后针对相同的随机输入检查两者的输出结果。
+2. 生成的随机输入的数据遵循特定的模式，这样我们就可以知道期望的输出的模式。
+
+通过**使用当前时间作为随机种子**，在整个过程中的每次运行测试命令时都将探索新的随机数据。如果你使用的是定期运行的自动化测试集成系统，随机测试将特别有价值。
+
+### 测试一个命令
+如果一个包的名字是 main，那么在构建时会生成一个可执行程序，不过main包可以作为一个包被测试器代码导入。
+
+### 白盒测试
+黑盒测试只需要测试包公开的文档和API行为，内部实现对测试代码是透明的。相反，白盒测试有访问包内部函数和数据结构的权限，因此可以做到一些普通客户端无法实现的测试。与黑盒测试相比，白盒测试可以对内部一些棘手的实现提供更多的测试覆盖。
+
+测试过程中，善于利用桩，这样可以方便配置，容易预测，更可靠，也更容易观察，同时也可以避免一些不良的副作用。
+> 注意：测试函数返回之前要恢复原先的状态以便后续其他测试没有影响。（建议使用 defer 来确保所有执行路径后都能恢复）
+
+### 外部测试包
+可以通过外部测试包的方式解决循环依赖的问题，也就是在要测试的包（假设是 `net/url`）所在的目录声明一个独立的`{包名}_test`测试包（这里就是 `net/url_test`）。其中包名的_test后缀告诉go test工具它应该建立一个额外的包来运行测试。
+
+因为外部测试包是一个独立的包，所以能够导入那些依赖待测代码本身的其他辅助包。在设计层面，外部测试包是在所有它依赖的包的上层：
+
+![](https://books.studygolang.com/gopl-zh/images/ch11-02.png)
+
+可以用go list命令查看包对应目录中哪些Go源文件是产品代码，哪些是包内测试，还有哪些是外部测试包：
+```sh
+# GoFiles表示产品代码对应的Go源文件列表
+$ go list -f={{.GoFiles}} fmt
+[...]
+
+# TestGoFiles表示的是fmt包内部测试代码，以_test.go为后缀文件名
+$ go list -f={{.TestGoFiles}} fmt
+[...]
+
+# XTestGoFiles表示的是属于外部测试包的测试代码
+$ go list -f={{.XTestGoFiles}} fmt
+[...]
+```
+
+有时候外部测试包也需要访问被测试包内部的代码，我们可以通过一些技巧解决：**在包内的一个_test.go文件中导出一个内部的实现给外部测试包。**因为这些代码只有在测试时才需要，因此一般会放在export_test.go文件中。这个技巧可以广泛用于位于外部测试包的白盒测试。
+
+### 编写有效的测试
+略
+
+### 避免脆弱的测试
+如果一个测试仅仅对程序做了微小变化就失败则称为脆弱。
+
+避免脆弱测试代码的方法是：
+* 只检测你真正关心的属性。
+* 保持测试代码的简洁和内部结构的稳定。
+* 特别是对断言部分要有所选择。
+* 不要对字符串进行全字匹配，而是针对那些在项目的发展中是比较稳定不变的子串。
 
 ## 测试覆盖率
+对待测程序执行的测试的程度称为**测试的覆盖率**。测试覆盖率并不能量化——即使最简单的程序的动态也是难以精确测量的——但是有启发式方法来帮助我们编写有效的测试代码。
 
-## 基准测试
+语句的覆盖率是指在测试中至少被运行一次的代码占总代码数的比例。
 
-## 剖析
+下面这个命令可以显示测试覆盖率工具的使用用法：
+```sh
+$ go tool cover
+Usage of 'go tool cover':
+Given a coverage profile produced by 'go test':
+	go test -coverprofile=c.out
+# -coverprofile标志参数通过在测试代码中插入生成钩子来统计覆盖率数据。
+# 在运行每个测试前，它将待测代码拷贝一份并做修改，在每个词法块都会设置一个布尔标志变量。
+# 当被修改后的被测试代码运行退出时，将统计日志数据写入c.out文件，并打印一部分执行的语句的一个总结。
+# 如果使用了-covermode=count标志参数，那么将在每个代码块插入一个计数器而不是布尔标志量。
+# 在统计结果中记录了每个块的执行次数，这可以用于衡量哪些是被频繁执行的热点代码。
+
+# 下面的命令运行测试覆盖率工具
+Open a web browser displaying annotated source code:
+	go tool cover -html=c.out
+
+Write out an HTML file instead of launching a web browser:
+	go tool cover -html=c.out -o coverage.html
+
+Display coverage percentages to stdout for each function:
+	go tool cover -func=c.out
+
+Finally, to generate modified source code with coverage annotations
+(what go test -cover does):
+	go tool cover -mode=set -var=CoverageVariableName program.go
+```
+
+测试覆盖率工具可以帮助我们快速识别测试薄弱的地方，但是设计好的测试用例和编写应用代码一样需要严密的思考。
+
+## 基准测试（`func BenchmarkXxxx(b *testing.B)`）
+```golang
+import "testing"
+
+// 函数名以 Benchmark 为前缀名，并且带有一个*testing.B类型的参数；
+// *testing.B参数除了提供和*testing.T类似的方法，还有额外一些和性能测量相关的方法。
+// 它还提供了一个整数N，用于指定操作执行的循环次数。
+func BenchmarkName(b *testing.B) {
+    for i := 0; i < b.N; i++ {
+        // ...
+    }
+}
+```
+
+> 注意：避免直接修改b.N来控制输入的大小。除非你将它作为一个固定大小的迭代计算输入，否则基准测试的结果将毫无意义。
+
+默认情况下不运行任何基准测试。我们需要通过 `-bench` 命令行标志参数手工指定要运行的基准测试函数。该参数是一个正则表达式，用于匹配要执行的基准测试函数的名字，默认值是空的。
+```sh
+# “.”模式将可以匹配所有基准测试函数
+$ go test -bench=.
+...
+```
+
+`-benchmem` 命令行标志参数将在报告中包含内存的分配数据统计。这样就可以比较优化前后内存的分配情况。
+
+### 比较型基准测试
+比较型的基准测试就是普通程序代码。它们通常是单参数的函数，由几个不同数量级的基准测试函数调用：
+```golang
+// 通过参数 size 来指定输入大小
+func benchmark(b *testing.B, size int) { /* ... */ }
+func Benchmark10(b *testing.B)         { benchmark(b, 10) }
+func Benchmark100(b *testing.B)        { benchmark(b, 100) }
+func Benchmark1000(b *testing.B)       { benchmark(b, 1000) }
+```
+
+## 剖析（profile）
+当我们想仔细观察我们程序的运行速度的时候，最好的方法是性能剖析。剖析技术是基于程序执行期间一些自动抽样，然后在收尾时进行推断；最后产生的统计结果就称为剖析数据。
+
+Go语言支持多种类型的剖析性能分析：
+* CPU剖析数据标识了最耗CPU时间的函数。
+  * `$ go test -cpuprofile=cpu.out`
+* 堆剖析则标识了最耗内存的语句。
+  * `$ go test -memprofile=mem.out`
+* 阻塞剖析则记录阻塞goroutine最久的操作，例如系统调用、管道发送和接收，还有获取锁等。
+  * `$ go test -blockprofile=block.out`
+
+剖析对于长期运行的程序尤其有用，因此可以通过调用Go的runtime API来启用运行时剖析。
+
+虽然 `go test` 通常在测试完成后就丢弃临时用的测试程序，但是在启用分析的时候会将测试程序保存为foo.test文件，其中foo部分对应待测包的名字。
+
+### 使用 pprof 分析采样数据
+`pprof` 是Go工具箱自带的一个工具，但并不是一个日常工具，它对应 `go tool pprof` 命令。该命令有许多特性和选项，但是最基本的是两个参数：生成这个概要文件的可执行程序和对应的剖析数据。
+
+
+## 示例函数（`func ExampleXxxxx()`）
+```golang
+// 以Example为函数名开头，
+// 没有函数参数和返回值。
+func ExampleName() {
+    // ...
+    // Output:
+    // ...
+}
+```
+
+示例函数的用处：
+1. 作为文档
+   * 方便展示属于同一个接口的几种类型或函数之间的关系，所有的文档都必须关联到一个地方
+   * 示例函数是真实的Go代码，需要接受编译器的编译时检查，这样可以保证源代码更新时，示例代码不会脱节。
+2. 在 `go test` 执行测试的时候也会运行示例函数测试。
+    * 如果示例函数内含有类似上面例子中的 `// Output:` 格式的注释，那么测试工具会执行这个示例函数，然后检查示例函数的标准输出与注释是否匹配。
+3. 提供一个真实的演练场
+    *  http://golang.org 就是由godoc提供的文档服务，它使用了Go Playground让用户可以在浏览器中在线编辑和运行每个示例函数
+  
+根据示例函数的后缀名部分，godoc 这个web文档服务器会将示例函数关联到某个具体函数或包本身，Example示例函数将是包文档的一部分。
